--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,5 +33,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   datascience:
     # Config indicated by + and applies to all files under models/example/
-    sales_february:
+    aggregate:
       +materialized: view
