--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "dbt.enableNewLineagePanel": true,
-    "dbt.queryLimit": 5
+    "dbt.queryLimit": 5,
+    "dbt.enableNewQueryPanel": true
 }
