Mise en place dwh

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,3 +35,11 @@ models:
     # Config indicated by + and applies to all files under models/example/
     aggregate:
       +materialized: view
+  
+  dbt_artifacts:
+    +database: decideom_lyon # optional, default is your target database
+    +schema: logs # optional, default is your target schema
+
+# Configuration for logs
+on-run-end:
+  - "{{ dbt_artifacts.upload_results(results) }}"
